Fix insecure dynamic Function issue and switch to edge runtime (#11)
* lock cheerio version

* rewrite excerpts

* length 20

* tune docs

* update next for fixing streaming issue on prod

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.16.1",
-    "excerpts": "^0.0.3",
     "ioredis": "^4.19.4",
     "marked": "^1.2.7",
-    "next": "^12.0.11-canary.18",
+    "next": "^12.0.11-canary.21",
     "oauth": "^0.9.15",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
