--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^2.16.1",
     "ioredis": "^4.19.4",
     "marked": "^1.2.7",
-    "next": "^12.0.11-canary.21",
+    "next": "^12.1.0",
     "oauth": "^0.9.15",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
